Fixed icon major style on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1359,7 +1359,7 @@ input[type="button"],
 			width: 4em;
 			height: 4em;
 			line-height: 4em;
-			box-shadow: 0 0 0 7px white, 0 0 0 8px _palette(border);
+			// box-shadow: 0 0 0 7px white, 0 0 0 8px _palette(border);
 
 			&:before {
 				font-size: 24px;
